--- a/views/register.ejs
+++ b/views/register.ejs
@@ -12,7 +12,7 @@
 
 <body class="register">
 
-    <%- include('include/header.ejs') %>
+    <%- include('include/header.ejs',{loggedIn: false, user: '' }) %>
 
     <h1>Register</h1>
 
