--- a/views/logout.ejs
+++ b/views/logout.ejs
@@ -12,7 +12,7 @@
 
 <body class="secret">
 
-    <%- include('include/header.ejs', {loggedIn: loggedIn, user: user }) %>
+    <%- include('include/header.ejs', {loggedIn: false, user: '' }) %>
 
     <main>
         <h1>You have been logged out!</h1>
